# nitro

./: .gitattributes  .gitmodules  COPYING  Nitro.yml  README.md  build-cli.ps1  build-cli.sh  build-deps.ps1  build-deps.sh  build-dist.ps1  build-dist.sh  build-nitro.ps1  build-nitro.sh
.cargo/: config.toml
.github/workflows/: ci.yml
cli/: .nitro  App.nt
ffi/: CMakeLists.txt  lld.cpp  llvm.cpp  llvm_block.cpp  llvm_builder.cpp  llvm_context.cpp  llvm_function.cpp  llvm_integer.cpp  llvm_layout.cpp  llvm_module.cpp  llvm_target.cpp  llvm_type.cpp  nitro.hpp
stage0/: Cargo.toml  build.rs
stage0/src/: ffi.rs  main.rs
stage0/src/ast/: attr.rs  bt.rs  class.rs  expr.rs  func.rs  imp.rs  mod.rs  node.rs  path.rs  stmt.rs  struc.rs  ty.rs  using.rs
stage0/src/codegen/: block.rs  builder.rs  func.rs  mod.rs  resolver.rs  target.rs  ty.rs
stage0/src/dep/: mod.rs
stage0/src/lexer/: mod.rs  span.rs  token.rs
stage0/src/pkg/: dep.rs  lib.rs  meta.rs  mod.rs  target.rs  ty.rs
stage0/src/project/: meta.rs  mod.rs
stage0/src/ty/: attr.rs  basic.rs  class.rs  mod.rs  struc.rs
stage0/src/zstd/: mod.rs  read.rs
std/: .nitro  Allocator.nt  Allocator.pt  Int32.nt  UInt.nt  UInt8.nt
stub/darwin/: libSystem.tbd
stub/linux-gnu/: libc.ifs
stub/win32/: msvcrt.def
