[package]
name = "nitro"
version = "0.1.0"
description = "A CLI to work with Nitro project"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["cargo"] }
llvm-sys = { version = "160", features = ["strict-versioning"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
